Refactor messaging configuration and enhance multi-broker support (Kafka/Rabbit).
- Added conditional annotations to producer beans for better auto-configuration.
- Updated consumers to handle multiple topics/queues.
- Enhanced messaging properties and configuration to support additional use cases.
- Introduced multi-publish endpoint in `DemoController` and extended request model.
- Updated dependencies to include Kafka and RabbitMQ.

--- a/services/serviceA/src/main/resources/application.yaml
+++ b/services/serviceA/src/main/resources/application.yaml
@@ -20,12 +20,18 @@ spring:
     console:
       enabled: true
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: localhost:9093
   rabbitmq:
     host: localhost
     port: 5672
     username: guest
     password: guest
+
+# Outbox Processor 설정 (ServiceA에서만 활성화)
+outbox:
+  enabled: true
+  schedule:
+    delay-ms: 1000  # 폴링 주기(ms)
 
 messaging:
   type: KAFKA   # KAFKA | RABBIT (대소문자 구분)
