--- a/services/serviceA/build.gradle
+++ b/services/serviceA/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation project(':common:outbox')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
