--- a/common/data-serializing/build.gradle
+++ b/common/data-serializing/build.gradle
@@ -20,7 +20,10 @@ dependencyManagement {
 
 dependencies {
     api project(':common:event')
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
