--- a/common/infra-messaging/build.gradle
+++ b/common/infra-messaging/build.gradle
@@ -20,6 +20,7 @@ dependencyManagement {
 
 dependencies {
     api project(':common:event')
+    api project(':common:data-serializing')
 
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'org.springframework.kafka:spring-kafka'
